@@ -1,3 +1,12 @@
+2003-11-10  Paul Eggert  <eggert@twinsun.com>
+
+	* xalloc.h (xalloc_oversized): [! (defined PTRDIFF_MAX &&
+	PTRDIFF_MAX < SIZE_MAX)]: Fix off-by-one error that would have
+	rejected some allocations of exactly SIZE_MAX - 2 bytes.
+	From Bruno Haible.
+	[defined PTRDIFF_MAX && PTRDIFF_MAX < SIZE_MAX]: Use SIZE_MAX,
+	not (size_t) -1, since it's defined here.
+
 2003-11-06  Paul Eggert  <eggert@twinsun.com>
 
 	* xalloc.h [HAVE_STDINT_H]: Include <stdint.h>.
